# Amorfly-AI

./: .gitignore  README.md  index.html  install_amorfly_ai.sh  kur.sh  motorlari_elle_kur.sh  package.json  vite.config.ts
.github/workflows/: build-release.yml  ci.yml
docs/: architecture.md
src/: App.legacy.tsx.bak  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  diagnostics.rs  documents.rs  excel_gen.rs  installer.rs  language_learning.rs  lib.rs  logger.rs  main.rs  memory.rs  models.rs  online.rs  queue.rs  rag.rs  reference_data.rs  router.rs  security.rs  smart_chat.rs  subtitles.rs  system_habits.rs  tasks.rs  upscale.rs  voice.rs
src/ai/: inference.ts.bak
src/components/: CodeBlock.tsx  MessageContent.tsx  OSCompanionDashboard.legacy.tsx.bak
src/core/: orchestrator.ts.bak
src/lib/: clipboard.ts  languages.ts  log.ts  openFile.ts
src/media/: processor.ts.bak
src/models/: store.ts.bak
src/pipelines/: automation.ts.bak
src/security/: encryption.ts.bak
src/system/: gpu.ts.bak
src/tabs/: ChatTab.tsx  DiagnosticsTab.tsx  DocumentsTab.tsx  LanguageLearningTab.tsx  ModelsTab.tsx  SettingsTab.tsx  SubtitlesTab.tsx  TasksTab.tsx  UpscaleTab.tsx
